<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="#FFE8D6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txttitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Titulo"
            android:textColor="#023047"
            android:textSize="30sp"
            android:textStyle="bold"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/txtusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_NombreUsu"
            android:textColor="#023047"
            android:textSize="24sp"
            android:textStyle="bold"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/inputnombre"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:maxLength="30"
            android:inputType="text"
            android:labelFor="@+id/viewTitulo"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
            android:textSize="22sp"

            android:hint="@string/hint_Nombre"

            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />


        <TextView
            android:id="@+id/txtcontra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Contra"
            android:textColor="#023047"
            android:textSize="24sp"
            android:textStyle="bold"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contrasenia"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/hint_Contra"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="0dp"
            app:boxCornerRadiusBottomStart="0dp"
            app:boxCornerRadiusTopEnd="0dp"
            app:boxCornerRadiusTopStart="0dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            app:layout_constraintVertical_bias="0.62"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputcontra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"


                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@"
                android:hint="@string/hint_Contra"

                android:inputType="textPassword"
                android:paddingTop="15dp"
                android:paddingBottom="8dp"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/txtconficontra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ConfiContra"
            android:textColor="#023047"
            android:textSize="24sp"
            android:textStyle="bold"

            android:layout_marginTop="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contraseniaconfi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/hint_Contra"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="0dp"
            app:boxCornerRadiusBottomStart="0dp"
            app:boxCornerRadiusTopEnd="0dp"
            app:boxCornerRadiusTopStart="0dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.62"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputconficontra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"

                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@"
                android:hint="@string/hint_Contra"

                android:inputType="textPassword"
                android:paddingTop="15dp"
                android:paddingBottom="8dp"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtrol"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_Rol"
                android:textColor="#023047"
                android:textSize="24sp"
                android:textStyle="bold"

                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Spinner
                android:id="@+id/spirol"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:entries="@array/Rol"
                android:textColor="#219EBC"
                android:textSize="50sp"


                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                app:cornerRadius="10dp"/>


        </LinearLayout>

        <Button
            android:id="@+id/btnregistrar"

            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"

            android:backgroundTint="#005F73"
            android:onClick="onClick"
            android:text="@string/btn_Registrar"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:cornerRadius="10dp" />


        <Button
            android:id="@+id/btncancelar"

            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="60dp"

            android:backgroundTint="#005F73"
            android:onClick="volverLogin"
            android:text="@string/btn_Cancelar"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="10dp" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>