<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="#FFE8D6"
    tools:context=".vernotificacion">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ES HOY!!! ES HOY!!!"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:orientation="vertical">



            <TextView
                android:id="@+id/viewTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_titulo"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="30"
                android:inputType="text"
                android:labelFor="@+id/viewTitulo"
                android:textSize="20sp" />

            <Button
                android:id="@+id/aFecha"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#005F73"
                android:text="Fecha"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/eFecha"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/aHora"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#005F73"
                android:text="Hora"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/eHora"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/viewDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_direccion"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:ems="10"
                android:maxLength="50"
                android:inputType="text"
                android:labelFor="@+id/viewDireccion"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/viewDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_descripcion"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:ems="10"
                android:maxLength="70"
                android:inputType="text"
                android:labelFor="@+id/viewDescripcion"
                android:textSize="20sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:src="@drawable/ic_delete" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>