<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE8D6"

    android:orientation="vertical"
    tools:context=".VerActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Información de Evento"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:orientation="vertical">


            <TextView
                android:id="@+id/viewTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_titulo"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@+id/viewTitulo"
                android:maxLength="30"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/aFecha"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@android:color/white"
                android:backgroundTint="#005F73"
                android:minWidth="88dip"
                android:minHeight="44dip"
                android:rotationY="2"
                android:text="FECHA"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="    Fecha" />

            <TextView
                android:id="@+id/eFecha"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/aHora"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@android:color/white"
                android:backgroundTint="#005F73"
                android:minWidth="88dip"
                android:minHeight="44dip"
                android:rotationY="2"
                android:text="HORA"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="    Hora" />

            <TextView
                android:id="@+id/eHora"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/viewDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_direccion"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@+id/viewDireccion"
                android:maxLength="50"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/viewDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_descripcion"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@+id/viewDescripcion"
                android:maxLength="70"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnGuarda"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#005F73"
                android:text="@string/btn_guarda"
                android:textColor="#FFFFFF"
                android:textColorHint="#2E0F77"
                android:textSize="16sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:src="@drawable/ic_edit"
                app:backgroundTint="#005F73" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:src="@drawable/ic_delete"
                app:backgroundTint="#005F73" />

        </LinearLayout>

    </ScrollView>


    <!--
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            tools:ignore="BottomAppBar">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_edit" />

        </com.google.android.material.bottomappbar.BottomAppBar>-->
</LinearLayout>